--- a/src/app/main/header/logo-and-searchbar/logo-and-searchbar.component.scss
+++ b/src/app/main/header/logo-and-searchbar/logo-and-searchbar.component.scss
@@ -23,7 +23,7 @@ input {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-  font-family: 'nunito';
+  font-family: "nunito";
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -33,15 +33,15 @@ input {
   position: absolute;
   top: 1.3rem;
   right: 0.9rem;
-  width:2.188rem;
+  width: 2.188rem;
   height: 2.188rem;
-  background-image: url('/img/serach-icon.svg');
+  background-image: url("/img/serach-icon.svg");
   background-size: 1.625rem 1.625rem;
   background-repeat: no-repeat;
 }
 
 input::placeholder {
-  font-family: 'nunito';
+  font-family: "nunito";
   font-style: normal;
   font-weight: 400;
   font-size: 1.5rem;
@@ -62,12 +62,14 @@ input:focus {
   overflow-y: auto;
   z-index: 10;
   border-radius: 0 0 2.5rem 2.5rem;
+  overflow-x: hidden;
 }
 
 .search-results ul {
   margin: 0;
   padding: 0;
   list-style: none;
+  overflow-x: hidden;
 }
 
 .search-results li {
@@ -100,7 +102,7 @@ input:focus {
 
 @media only screen and (max-width: 995px) {
   .searchbar {
-      display: none;
+    display: none;
   }
 }
 
@@ -110,4 +112,3 @@ input:focus {
     width: 0;
   }
 }
-
